# APWAM

./: .gitignore  LICENSE  MAAP_mode_label_proposal.md  MAAP_research_project_proposal.md  MAAP_research_project_proposal_CN.md  README.md  setup.py
Policy-Lightning-main/: .gitignore  LICENSE  README.md  deploy_policy.py  requirements.txt  run_local_dp2.sh  workspace.py  workspace_act.py
Policy-Lightning-main/common/: normalize_util.py  sampler.py
Policy-Lightning-main/config/: act.yaml  dp2.yaml  dp3.yaml  global_dp3.yaml  global_dp3_single_cam.yaml  local_dp2.yaml  local_dp2_single_cam.yaml  local_dp3.yaml  local_dp3_single_cam.yaml
Policy-Lightning-main/dataset/: dataset2d.py  dataset3d.py
Policy-Lightning-main/policy/: act.py  base_policy.py  custom_policy.py  dp2.py  dp3.py  dp3_global.py  dp3_global_single_cam.py  eval_multi_dp.py  local_dp2.py  local_dp2_single_cam.py  local_dp3.py  local_dp3_single_cam.py
Policy-Lightning-main/script/: convert_data.py  list_items.py
backups/handover_refactor_20260523_165447/: current_AB.diff  two_robots_handover_active_A.py  two_robots_handover_active_B.py
modenet/: __init__.py  model.py
robofactory/: __init__.py  requirements.txt
robofactory/custom_policy/: __init__.py  deploy_policy.py  pyproject.toml
robofactory/label_viewer/: index.html  manifest.json
robofactory/planner/: motionplanner.py  run.py  utils.py
robofactory/script/: build_label_viewer.py  download_assets.py  generate_data.py  generate_data_pointcloud.py  parse_h5_to_pkl_multi.py  parse_h5_to_pkl_single.py  (+3 more)
scripts/: maap_h5_to_lerobot.py
(+156 files in other folders)
