[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_policy"
version = "0.1.0"
description = "A user policy interface for deployment."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0"
] 